<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/Recipeze"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="75dp"
        android:fontFamily="@font/comfortaabold"
        android:text="@string/app_name"
        android:textColor="@color/logo_green"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/slogan"
        android:textAlignment="textStart"
        android:textColor="@color/logo_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Recipeze" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="90dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/login_instructions"
        android:textColor="@color/dark_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slogan" />

    <Button
        android:id="@+id/emailBtn"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:elevation="3dp"
        android:fontFamily="@font/poppinsregular"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/continue_with_email"
        android:textAlignment="center"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_mail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions"
        app:layout_constraintVertical_bias="0.032" />

    <Button
        android:id="@+id/googleBtn"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/white"
        android:elevation="3dp"
        android:fontFamily="@font/poppinsregular"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/continue_with_google"
        android:textAlignment="center"
        android:textColor="@color/dark_text"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_google__g__logo"
        app:iconTint="#00FFFFFF"
        app:iconTintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailBtn"
        app:layout_constraintVertical_bias="0.067"
        app:rippleColor="#DCDCDC" />

    <Button
        android:id="@+id/facebookBtn"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:backgroundTint="#3B5998"
        android:elevation="3dp"
        android:fontFamily="@font/poppinsregular"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:lineSpacingExtra="0sp"
        android:text="@string/continue_with_facebook"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_f_logo_rgb_white_1024"
        app:iconTint="#00FFFFFF"
        app:iconTintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleBtn"
        app:layout_constraintVertical_bias="0.060000002" />

    <ImageView
        android:id="@+id/chef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="540dp"
        android:layout_marginEnd="172dp"
        android:contentDescription="@string/chef"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_chef_nonstop" />

    <ImageView
        android:id="@+id/noodles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="252dp"
        android:layout_marginBottom="584dp"
        android:contentDescription="@string/noodles"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_noodles_nonstop" />
</androidx.constraintlayout.widget.ConstraintLayout>